// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label component background not set when length label is null 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="10"
    dy="3"
    fill="black"
    font-size="7.199999999999999px"
    font-weight="normal"
    id="text"
    lengthAdjust="spacingAndGlyphs"
    text-anchor="start"
    textLength="0"
    transform=""
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component background set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <rect
    fill="red"
    fill-opacity="100%"
    height="10.079999999999998"
    stroke="black"
    stroke-width="0"
    width="20.88"
    x="8.56"
    y="-4.199999999999999"
  >
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </rect>
   
  <text
    dx="10"
    dy="3"
    fill="black"
    font-size="7.199999999999999px"
    font-weight="normal"
    id="text"
    lengthAdjust="spacingAndGlyphs"
    text-anchor="start"
    textLength="18"
    transform=""
  >
    
    label
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component borderColor has no effect when no label 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="10"
    dy="3"
    fill="black"
    font-size="7.199999999999999px"
    font-weight="normal"
    id="text"
    lengthAdjust="spacingAndGlyphs"
    text-anchor="start"
    textLength="0"
    transform=""
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component borderColor set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <rect
    fill=""
    fill-opacity="0%"
    height="10.079999999999998"
    stroke="red"
    stroke-width="7.199999999999999"
    width="35.28"
    x="1.3600000000000012"
    y="-4.199999999999999"
  >
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </rect>
   
  <text
    dx="10"
    dy="3"
    fill="black"
    font-size="7.199999999999999px"
    font-weight="normal"
    id="text"
    lengthAdjust="spacingAndGlyphs"
    text-anchor="start"
    textLength="18"
    transform=""
  >
    
    label
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component borderWidth has no effect when no label 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="10"
    dy="3"
    fill="black"
    font-size="7.199999999999999px"
    font-weight="normal"
    id="text"
    lengthAdjust="spacingAndGlyphs"
    text-anchor="start"
    textLength="0"
    transform=""
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component borderWidth set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <rect
    fill=""
    fill-opacity="0%"
    height="10.079999999999998"
    stroke="black"
    stroke-width="7.199999999999999"
    width="35.28"
    x="1.3600000000000012"
    y="-4.199999999999999"
  >
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </rect>
   
  <text
    dx="10"
    dy="3"
    fill="black"
    font-size="7.199999999999999px"
    font-weight="normal"
    id="text"
    lengthAdjust="spacingAndGlyphs"
    text-anchor="start"
    textLength="18"
    transform=""
  >
    
    label
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component circular mode set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="rotate(-90)translate(0)"
>
  <!---->
   
  <text
    dx="10"
    dy="3"
    fill="black"
    font-size="7.199999999999999px"
    font-weight="normal"
    id="text"
    lengthAdjust="spacingAndGlyphs"
    text-anchor="start"
    textLength="0"
    transform=""
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component color set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="10"
    dy="3"
    fill="red"
    font-size="7.199999999999999px"
    font-weight="normal"
    id="text"
    lengthAdjust="spacingAndGlyphs"
    text-anchor="start"
    textLength="0"
    transform=""
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component default label renders correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="10"
    dy="3"
    fill="black"
    font-size="7.199999999999999px"
    font-weight="normal"
    id="text"
    lengthAdjust="spacingAndGlyphs"
    text-anchor="start"
    textLength="0"
    transform=""
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component font-weight set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="10"
    dy="3"
    fill="black"
    font-size="7.199999999999999px"
    font-weight="bold"
    id="text"
    lengthAdjust="spacingAndGlyphs"
    text-anchor="start"
    textLength="0"
    transform=""
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component label set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="10"
    dy="3"
    fill="black"
    font-size="7.199999999999999px"
    font-weight="normal"
    id="text"
    lengthAdjust="spacingAndGlyphs"
    text-anchor="start"
    textLength="18"
    transform=""
  >
    
    label
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component size set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 0)"
>
  <!---->
   
  <text
    dx="10"
    dy="0.5"
    fill="black"
    font-size="1.2px"
    font-weight="normal"
    id="text"
    lengthAdjust="spacingAndGlyphs"
    text-anchor="start"
    textLength="0"
    transform=""
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component x set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(0 1)"
>
  <!---->
   
  <text
    dx="10"
    dy="3"
    fill="black"
    font-size="7.199999999999999px"
    font-weight="normal"
    id="text"
    lengthAdjust="spacingAndGlyphs"
    text-anchor="start"
    textLength="0"
    transform=""
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;

exports[`Label component y set correctly 1`] = `
<g
  class="nodeLabel normal"
  transform="translate(1 0)"
>
  <!---->
   
  <text
    dx="10"
    dy="3"
    fill="black"
    font-size="7.199999999999999px"
    font-weight="normal"
    id="text"
    lengthAdjust="spacingAndGlyphs"
    text-anchor="start"
    textLength="0"
    transform=""
  >
    
    
    
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </text>
</g>
`;
